--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -98,7 +98,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:played_color="@color/white"
         app:scrubber_color="@color/white"
-        app:unplayed_color="#66F4F4F4" />
+        app:unplayed_color="@color/bright_grey" />
 
     <TextView
         android:id="@+id/music_player_song_current_position"
