--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue1">#7CCEDC</color>
     <color name="blue2">#3AB0C5</color>
+    <color name="bright_grey">#66CACACA</color>
 </resources>
