--- a/app/src/main/res/menu/option_menu_playlist.xml
+++ b/app/src/main/res/menu/option_menu_playlist.xml
@@ -7,8 +7,18 @@
         android:title="@string/search"
         android:icon="@drawable/ic_baseline_search_24"
         app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.widget.SearchView" />
+        app:actionViewClass="android.widget.SearchView"
+        android:iconTint="@color/white"
+        />
 
+
+    <item android:id="@+id/action_sort"
+        android:title="@string/sort"
+        android:icon="@drawable/ic_round_sort_24"
+        app:showAsAction="ifRoom|collapseActionView"
+        android:iconTint="@color/white"
+        />
+<!--
     <item android:title="Title 1"
         android:id="@+id/item_1"/>
 
@@ -16,6 +26,6 @@
         android:id="@+id/item_2" />
 
     <item android:title="Title 3"
-        android:id="@+id/item_3"/>
+        android:id="@+id/item_3"/>-->
 
 </menu>
