--- a/app/src/main/res/layout/fragment_artist.xml
+++ b/app/src/main/res/layout/fragment_artist.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.music_library.ArtistFragment">
+    tools:context=".ui.music_library.ArtistFragment"
+    android:id="@+id/artistcontainer">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/arr"
