Implement basic bottom player

--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -38,7 +38,7 @@
         android:layout_width="@dimen/music_small_control_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:contentDescription="@string/skip_forward_btn"
+        android:contentDescription="@string/skip_next_btn"
         app:layout_constraintBottom_toBottomOf="@+id/music_player_play_pause_btn"
         app:layout_constraintStart_toEndOf="@+id/music_player_play_pause_btn"
         app:layout_constraintTop_toTopOf="@+id/music_player_play_pause_btn"
@@ -51,7 +51,7 @@
         android:layout_width="@dimen/music_small_control_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:contentDescription="@string/skip_backward_btn"
+        android:contentDescription="@string/skip_prev_btn"
         app:layout_constraintBottom_toBottomOf="@+id/music_player_play_pause_btn"
         app:layout_constraintEnd_toStartOf="@+id/music_player_play_pause_btn"
         app:layout_constraintTop_toTopOf="@+id/music_player_play_pause_btn"
