--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
 
     <dimen name="music_play_pause_btn_size">70dp</dimen>
     <dimen name="music_small_control_btn_size">45dp</dimen>
+
+    <dimen name="bottom_music_player_btn_size">48dp</dimen>
+    <dimen name="bottom_music_player_height">65dp</dimen>
 </resources>
