--- a/app/src/main/res/layout/item_video_library_list.xml
+++ b/app/src/main/res/layout/item_video_library_list.xml
@@ -7,6 +7,7 @@
     android:padding="10dp">
 
     <LinearLayout
+        android:id="@+id/video_click_area_linearlayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
