--- a/app/src/main/res/layout/dialog_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet.xml
@@ -1,126 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/video_name_bottom_sheet_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="VIDEO NAME"
-        android:textStyle="bold"
+        android:padding="8dp"
+        android:text="@string/dialog_bottom_video_name"
         android:textSize="20sp"
-        android:padding="8dp"/>
+        android:textStyle="bold" />
+
     <LinearLayout
+        android:id="@+id/bottom_sheet_option_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/download"
         android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_margin="8dp"
             android:src="@drawable/ic_notifications_black_24dp"
-            android:layout_margin="8dp"/>
+            android:contentDescription="@string/dialog_bottom_option_information_ic" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Information"
             android:layout_gravity="center_vertical"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:text="@string/bottom_dialog_option_info" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bottom_sheet_option_add_playlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/shareLinearLayout"
         android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_margin="8dp"
             android:src="@drawable/ic_video"
-            android:layout_margin="8dp"/>
+            android:contentDescription="@string/dialog_bottom_option_playlist_ic" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add to playlist"
             android:layout_gravity="center_vertical"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:text="@string/dialog_bottom_option_playlist" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:id="@+id/uploadLinearLaySout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_margin="8dp"
             android:src="@drawable/ic_music"
-            android:layout_margin="8dp"/>
+            android:contentDescription="@string/dialog_bottom_option_rename_ic" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rename"
             android:layout_gravity="center_vertical"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:text="@string/dialog_bottom_option_rename" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:id="@+id/copyLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_margin="8dp"
             android:src="@drawable/ic_playlist"
-            android:layout_margin="8dp"/>
+            android:contentDescription="@string/dialog_bottom_option_share_ic" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Share"
             android:layout_gravity="center_vertical"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:text="@string/dialog_bottom_option_share" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/delete"
         android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_margin="8dp"
             android:src="@drawable/ic_home_black_24dp"
-            android:layout_margin="8dp"/>
+            android:contentDescription="@string/dialog_bottom_option_delete_ic" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete"
             android:layout_gravity="center_vertical"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:text="@string/dialog_bottom_option_delete" />
     </LinearLayout>
 </LinearLayout>
