--- a/app/src/main/res/layout/playlist_details_bs_layout.xml
+++ b/app/src/main/res/layout/playlist_details_bs_layout.xml
@@ -44,6 +44,30 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bs_addToQueuePlaylistDetailsItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:padding="12dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_round_add_to_queue_24"
+            app:tint="@color/black" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="24dp"
+            android:text="@string/add_to_queue"
+            android:textColor="@color/black" />
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/bs_deletePlaylistDetailsItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
