--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,8 @@
         android:id="@+id/bottom_music_player"
         android:layout_width="0dp"
         android:layout_height="@dimen/bottom_music_player_height"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -46,39 +46,58 @@
             style="@style/MusicControlBtn"
             android:layout_width="@dimen/bottom_music_player_btn_size"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="5dp"
             android:background="@null"
             android:contentDescription="@string/play_pause_btn"
             app:layout_constraintBottom_toBottomOf="@+id/bottom_music_player_skip_next_btn"
             app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_skip_next_btn"
             app:layout_constraintTop_toTopOf="@+id/bottom_music_player_skip_next_btn"
-            app:srcCompat="@drawable/level_list_play_pause_button_dark" />
+            app:srcCompat="@drawable/level_list_play_pause_button_dark"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <ImageButton
             android:id="@+id/bottom_music_player_skip_next_btn"
             style="@style/MusicControlBtn"
             android:layout_width="@dimen/bottom_music_player_btn_size"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@null"
+            android:contentDescription="@string/skip_next_btn"
+            app:layout_constraintBottom_toBottomOf="@+id/bottom_music_player_stop_btn"
+            app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_stop_btn"
+            app:layout_constraintTop_toTopOf="@+id/bottom_music_player_stop_btn"
+            app:layout_constraintVertical_bias="0.52"
+            app:srcCompat="@drawable/ic_skip_next_dark_24dp"
+            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
+
+        <ImageButton
+            android:id="@+id/bottom_music_player_stop_btn"
+            style="@style/MusicControlBtn"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:background="@null"
             android:contentDescription="@string/skip_next_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_skip_next_dark_24dp" />
+            app:layout_constraintVertical_bias="0.52"
+            app:srcCompat="@drawable/ic_cancel_thin_gray_24dp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <ImageButton
             android:id="@+id/bottom_music_player_skip_prev_btn"
             style="@style/MusicControlBtn"
             android:layout_width="@dimen/bottom_music_player_btn_size"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="5dp"
             android:background="@null"
             android:contentDescription="@string/skip_prev_btn"
             app:layout_constraintBottom_toBottomOf="@+id/bottom_music_player_skip_next_btn"
             app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_play_pause_btn"
             app:layout_constraintTop_toTopOf="@+id/bottom_music_player_skip_next_btn"
-            app:srcCompat="@drawable/ic_skip_prev_dark_24dp" />
+            app:srcCompat="@drawable/ic_skip_prev_dark_24dp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
             android:id="@+id/bottom_music_player_song_artwork"
