--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,7 @@
 
         <ImageView
             android:id="@+id/bottom_music_player_song_artwork"
+            android:transitionName="song_artwork"
             android:layout_width="@dimen/bottom_music_player_height"
             android:layout_height="0dp"
             android:background="@color/black"
