--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -138,7 +138,7 @@
         android:id="@+id/music_player_screen_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/now_playing"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -178,7 +178,7 @@
         android:layout_width="28dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:contentDescription="@string/close"
         android:minWidth="48dp"
         android:minHeight="48dp"
@@ -189,6 +189,7 @@
 
     <ImageView
         android:id="@+id/music_player_song_artwork"
+        android:transitionName="song_artwork"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
