--- a/app/src/main/res/menu/song_option.xml
+++ b/app/src/main/res/menu/song_option.xml
@@ -2,20 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/add_playlist"
-
         android:orderInCategory="10"
-        android:title="Add to playlist" />
+        android:title="@string/add_to_playlist" />
 
 
     <item
         android:id="@+id/song_detail"
-
         android:orderInCategory="30"
-        android:title="Song detail" />
+        android:title="@string/detail" />
 
     <item
-        android:id="@+id/add_favorite"
-
+        android:id="@+id/delete_song"
         android:orderInCategory="20"
-        android:title="Favorite" />
+        android:title="@string/delete" />
 </menu>
