--- a/app/src/main/res/layout/fragment_music_library.xml
+++ b/app/src/main/res/layout/fragment_music_library.xml
@@ -12,8 +12,10 @@
 
 
     <LinearLayout
+        android:id="@+id/music_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
