Don't remove song's artwork when hiding bottom player UI by stopping media

--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -15,6 +15,7 @@
         android:contentDescription="@string/music_artwork_background"
         android:scaleType="centerCrop"
         android:alpha="0.4"
+        android:src="#818181"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
