Make bottom music player song artwork's corner round

--- a/app/src/main/res/layout/bottom_music_player.xml
+++ b/app/src/main/res/layout/bottom_music_player.xml
@@ -64,17 +64,20 @@
         app:srcCompat="@drawable/ic_skip_prev_dark_24dp"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/bottom_music_player_song_artwork"
-        android:transitionName="song_artwork"
-        android:layout_width="@dimen/bottom_music_player_height"
-        android:layout_height="0dp"
-        android:background="@color/black"
+        android:layout_width="@dimen/bottom_music_player_song_artwork_size"
+        android:layout_height="@dimen/bottom_music_player_song_artwork_size"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:contentDescription="@string/music_artwork"
+        android:transitionName="song_artwork"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_music_note_white_24dp" />
+        app:shapeAppearanceOverlay="@style/ImageViewRoundedCorner"
+        app:srcCompat="@drawable/default_song_artwork_bottom_music_player" />
 
     <TextView
         android:id="@+id/bottom_music_player_song_title"
