--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,8 @@
         <item name="android:paddingTop">3dp</item>
         <item name="android:paddingBottom">3dp</item>
     </style>
+
+    <style name="ImageViewRoundedCorner">
+        <item name="cornerSize">10dp</item>
+    </style>
 </resources>
