--- a/app/src/main/res/layout/bottom_music_player.xml
+++ b/app/src/main/res/layout/bottom_music_player.xml
@@ -79,6 +79,17 @@
         app:shapeAppearanceOverlay="@style/ImageViewRoundedCorner"
         app:srcCompat="@drawable/default_song_artwork_bottom_music_player" />
 
+    <ImageView
+        android:id="@+id/bottom_music_player_song_artwork_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/music_artwork_background"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/bottom_music_player_song_title"
         android:layout_width="0dp"
