--- a/app/src/main/res/layout/song_list_grid.xml
+++ b/app/src/main/res/layout/song_list_grid.xml
@@ -53,6 +53,6 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@android:drawable/btn_default" />
+            app:srcCompat="@drawable/ic_baseline_more_vert_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
