--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -148,6 +148,7 @@
 
     <TextView
         android:id="@+id/music_player_song_title"
+        style="@style/HorizontalAutoScrollTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
@@ -172,6 +173,7 @@
 
     <TextView
         android:id="@+id/music_player_song_artist"
+        style="@style/HorizontalAutoScrollTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
