--- a/app/src/main/res/layout/album_list.xml
+++ b/app/src/main/res/layout/album_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="3dp">
+    app:cardElevation="3dp"
+    app:cardCornerRadius="8dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -11,7 +12,7 @@
         <ImageView
             android:id="@+id/albumimg"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="140dp"
             android:background="#E9E9E9"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
