--- a/app/src/main/res/layout/song_list_grid.xml
+++ b/app/src/main/res/layout/song_list_grid.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="3dp">
+    app:cardElevation="3dp"
+    app:cardCornerRadius="8dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,7 +14,7 @@
         <ImageView
             android:id="@+id/songthumb"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="140dp"
             android:background="#E9E9E9"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
