--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:contentDescription="@string/music_artwork"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:transitionName="song_artwork"
         app:layout_constraintBottom_toTopOf="@+id/music_player_song_title"
         app:layout_constraintEnd_toEndOf="parent"
